feat: Implement a new homepage structure including hero, CTA, tool reference, and configuration components with associated data.

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "license": "MIT",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.25.2",
+    "@vercel/analytics": "^1.6.1",
     "mcp-handler": "^1.0.7",
     "next": "16.1.6",
     "react": "19.2.3",
